# nl2sql-data-agent

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
docs/: architecture.md
scripts/: run_cli.sh  run_ui.sh
src/nl2sql_data_agent/: __main__.py  app.py  cli.py
src/nl2sql_data_agent/core/database/: __init__.py  database_handler.py
src/nl2sql_data_agent/core/logger/: __init__.py
src/nl2sql_data_agent/core/model_manager/: __init__.py  anthropic_model.py  huggingface_model.py  model_manager.py  ollama_model.py  openai_model.py
src/nl2sql_data_agent/core/prompt_renderer/: __init__.py  prompt_renderer.py
src/nl2sql_data_agent/pipeline/: config.py  nl2sql_pipeline.py
src/nl2sql_data_agent/pipeline/example_selector/: example_selector.py
src/nl2sql_data_agent/pipeline/schema_linker/: schema_linker.py
src/nl2sql_data_agent/pipeline/sql_corrector/: __init__.py  sql_corrector.py
src/nl2sql_data_agent/pipeline/sql_executor/: __init__.py  sql_executor.py
src/nl2sql_data_agent/pipeline/sql_generator/: __init__.py  sql_generator.py
src/vortosql/: __main__.py  app.py  cli.py  ui.py
src/vortosql/core/database/: __init__.py  database_handler.py
src/vortosql/core/logger/: __init__.py  logger.py
src/vortosql/core/model_manager/: __init__.py  anthropic_model.py  huggingface_model.py  model_manager.py  ollama_model.py  openai_model.py  utils.py
src/vortosql/core/prompt_renderer/: __init__.py  prompt_renderer.py
src/vortosql/pipeline/: config.py  nl2sql_pipeline.py  operator.py
src/vortosql/pipeline/answer_generator/: __init__.py  (+1 more)
(+22 files in other folders)
