[project]
name = "nl2sql-data-agent"
authors = [{ name = "Mo Malekpour" }]
version = "0.1.0"
description = "NL2SQL Data Agent"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["nl2sql", "text2sql", "nl-to-sql", "text-to-sql", "llm", "sql", "data-agent"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "datasets>=4.8.4",
    "duckdb>=1.5.2",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "sqlglot>=30.4.3",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
]

[project.scripts]
nl2sql-data-agent = "nl2sql_data_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nl2sql_data_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["__init__.py", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py314"]
exclude = '(__init__\.py|.*\.ipynb)'
